ci: fix linting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,5 +84,6 @@
     "pcss",
     "postcss"
   ],
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "vue.server.includeLanguages": ["vue", "markdown"]
 }
