--- a/package.json
+++ b/package.json
@@ -70,9 +70,9 @@
     "typedoc-plugin-merge-modules": "^6.0.3",
     "typedoc-vitepress-theme": "^1.0.2",
     "typescript": "^5.6.3",
+    "vite-tsconfig-paths": "^5.0.1",
     "vitepress": "^1.4.1",
-    "vitest": "^2.1.3",
-    "vue": "^3.5.12"
+    "vitest": "^2.1.3"
   },
   "simple-git-hooks": {
     "pre-commit": "npm run typecheck & npx lint-staged"
